--- a/index.html
+++ b/index.html
@@ -9,37 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="scripts/header.js" defer></script>
     <script src="scripts/footer.js" defer></script>
+    <script src="scripts/index.js" defer></script>
 
 </head>
 
 <body>
     <header id="header">
-       
+
     </header>
     <section id="artitas">
         <h2>Artistas más escuchados</h2>
         <div id="lista-artistas">
-        <div>
-            <h3>Yeah Yeah Yeahs</h3>
-            <a href="detalle_artistas.html"><img src="img/yeah_yeah_yeahs_art.jpg"></a>
         </div>
-        <div>
-            <h3>Nombre</h3>
-            <a href="detalle_artistas.html"><img></a>
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <a href="detalle_artistas.html"><img></a>
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <a href="detalle_artistas.html"><img></a>
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <a href="detalle_artistas.html"><img></a>
-        </div>
-    </div>
         <button id="verMasArtistas" class="arrow-button">
             <i class="fas fa-chevron-down"></i> <!-- Ícono de flecha -->
         </button>
@@ -47,27 +28,7 @@
     <section id="canciones">
         <h2>Canciones populares</h2>
         <div id="lista-canciones">
-        <div>
-            <h3>Maps</h3>
-            <a href="detalle_cancion.html"><img src="img/mapsCancion.jpg"></a>
         </div>
-        <div>
-            <h3>Maps</h3>
-            <a href="detalle_cancion.html"><img src=""></a>
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <a href="detalle_cancion.html"><img src=""></a>
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <a href="detalle_cancion.html"><img src=""></a>
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <a href="detalle_cancion.html"><img src=""></a>
-        </div>
-    </div>
         <button id="verMasCanciones" class="arrow-button">
             <i class="fas fa-chevron-down"></i> <!-- Ícono de flecha -->
         </button>
@@ -75,86 +36,13 @@
     <section id="albumes">
         <h2>Álbumes recomendados</h2>
         <div id="lista-albumes">
-        <div>
-            <h3>Fever To Tell</h3>
-            <img src="img/Yeah_Yeah_Yeahs_-_Fever_to_Tell.png">
         </div>
-        <div>
-            <h3>Nombre</h3>
-            <img src="">
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <img src="">
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <img src="">
-        </div>
-        <div>
-            <h3>Nombre</h3>
-            <img src="">
-        </div>
-    </div>
         <button id="verMasAlbumes" class="arrow-button">
             <i class="fas fa-chevron-down"></i> <!-- Ícono de flecha -->
         </button>
     </section>
     <footer id="footer">
     </footer>
-
-    <script>
-        // Función para cargar más artistas
-        document.getElementById("verMasArtistas").addEventListener("click", async () => {
-            const res = await fetch("http://localhost:3000/api/artistas");
-            const artistas = await res.json();
-            const contenedor = document.getElementById("lista-artistas");
-
-            // Por cada artista que recibimos, agregamos un div con el nombre y la imagen
-            artistas.forEach(artista => {
-                const div = document.createElement("div");
-                div.innerHTML = `
-                    <h3>${artista.nombre}</h3>
-                    <a href="detalle_artistas.html"><img src="${artista.imagen_url}" alt="${artista.nombre}"></a>
-                `;
-                contenedor.appendChild(div);
-            });
-        });
-
-        // Función para cargar más canciones
-        document.getElementById("verMasCanciones").addEventListener("click", async () => {
-            const res = await fetch("http://localhost:3000/api/canciones");
-            const canciones = await res.json();
-            const contenedor = document.getElementById("lista-canciones");
-
-            // Por cada canción que recibimos, agregamos un div con el nombre y la imagen
-            canciones.forEach(cancion => {
-                const div = document.createElement("div");
-                div.innerHTML = `
-                    <h3>${cancion.nombre}</h3>
-                    <a href="detalle_cancion.html"><img src="${cancion.imagen_url}" alt="${cancion.nombre}"></a>
-                `;
-                contenedor.appendChild(div);
-            });
-        });
-
-        // Función para cargar más álbumes
-        document.getElementById("verMasAlbumes").addEventListener("click", async () => {
-            const res = await fetch("http://localhost:3000/api/albumes");
-            const albumes = await res.json();
-            const contenedor = document.getElementById("lista-albumes");
-
-            // Por cada álbum que recibimos, agregamos un div con el nombre y la imagen
-            albumes.forEach(album => {
-                const div = document.createElement("div");
-                div.innerHTML = `
-                    <h3>${album.nombre}</h3>
-                    <a href="detalle_album.html"><img src="${album.imagen_url}" alt="${album.nombre}"></a>
-                `;
-                contenedor.appendChild(div);
-            });
-        });
-    </script>
 </body>
 
 </html>
