--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <script src="scripts/header.js" defer></script>
   <script src="scripts/footer.js" defer></script>
+  <script src="scripts/perfilUser.js" defer></script>
   <title>Perfil de Usuario</title>
 </head>
 <body>
@@ -53,25 +54,5 @@
 
   <footer id="footer">
   </footer>
-
-  <script>
-    const nombreUsuario = localStorage.getItem("usuario") || "Nombre de Usuario";
-    document.getElementById("nombreUsuario").textContent = nombreUsuario;
-
-    // Simular conteo de favoritos
-    let total = localStorage.length;
-    let canciones = 0;
-    let artistas = 0;
-
-    for (let i = 0; i < total; i++) {
-      const key = localStorage.key(i);
-      if (key.startsWith("can_")) canciones++;
-      else if (key.startsWith("art_")) artistas++;
-    }
-
-    document.getElementById("totalFavs").textContent = canciones + artistas;
-    document.getElementById("totalCanciones").textContent = canciones;
-    document.getElementById("totalArtistas").textContent = artistas;
-  </script>
 </body>
 </html>
